<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tonypi_obj_grasp_control</name>
  <version>0.0.1</version>
  <description>robot pick up objects placed in non relative fixed positions</description>
  <maintainer email="nuo.wu@horizon.cc">nuo.wu</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ai_msgs</depend>
  
  <exec_depend>tros_robot_pick_obj_msg</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>